fix: make the icon for the roles application smaller

--- a/app/src/js/app.scss
+++ b/app/src/js/app.scss
@@ -48,6 +48,12 @@
 	}
 }
 
+// This declaration will be removed after receiving the icon for this application
+.bauhaus-app img {
+	width: 50% !important;
+	margin-top: 1.5em !important;
+}
+
 @media (min-width: 750px) {
 	.home-page-links {
 		--columns: 2;
